--- a/.env
+++ b/.env
@@ -1,17 +1,31 @@
+# Database configuration
 DB_DRIVER=postgres
-DATABASE_URL=postgres://user:password@db:5432/stori?sslmode=disable
-DATABASE_USER=user
-DATABASE_PASSWORD=password
-DATABASE_HOST=db
+DATABASE_URL=postgres://storiuser:storipass@postgres:5432/stori?sslmode=disable
+DATABASE_USER=storiuser
+DATABASE_PASSWORD=storipass
+DATABASE_HOST=postgres
 DATABASE_PORT=5432
 DATABASE_NAME=stori
+DATABASE_SSLMODE=disable
+DATABASE_MAX_CONNECTIONS=10
+DATABASE_MAX_IDLE_CONNECTIONS=10
+
+# Elasticsearch configuration
 ELASTICSEARCH_URL=http://elasticsearch:9200
+
+# NATS configuration
 NATS_URL=nats://nats:4222
-SMTP_HOST=smtp
-SMTP_PORT=25
-SMTP_USER=user
-SMTP_PASSWORD=password
+
+# API configuration
 API_PORT=8080
 GRPC_PORT=50051
+
+# SMTP configuration (for development with MailHog or Gmail)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=david.hernandez.prueba.smtp@gmail.com
+SMTP_PASSWORD=lkxvqwkujsavtkqj
+
+# Other application settings
 DOMAIN=localhost
 MIGRATE_NOSSL=true
