--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,3 +1,4 @@
+# Dockerfile for API
 FROM golang:1.22.2-alpine AS builder
 
 WORKDIR /app
@@ -8,7 +9,6 @@ RUN go mod download
 COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main ./cmd/api
-RUN CGO_ENABLED=0 GOOS=linux go build -o db_tools ./scripts/db_tools.go
 
 FROM alpine:3.18
 
@@ -16,10 +16,11 @@ RUN apk --no-cache add ca-certificates tzdata
 
 WORKDIR /root/
 
+COPY --from=builder /app/.env .env
 COPY --from=builder /app/main .
-COPY --from=builder /app/db_tools .
-COPY --from=builder /app/scripts/migrations ./scripts/migrations
+COPY --from=builder /app/web ./web
+COPY --from=builder /app/scripts/migrations ./migrations
 
-EXPOSE 8080
+EXPOSE 8080 50051
 
 CMD ["./main"]
