Fix summary in WEB

--- a/.env
+++ b/.env
@@ -27,5 +27,5 @@ SMTP_USER=david.hernandez.prueba.smtp@gmail.com
 SMTP_PASSWORD=lkxvqwkujsavtkqj
 
 # Other application settings
-DOMAIN=localhost
+DOMAIN=api
 MIGRATE_NOSSL=true
