--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -19,5 +19,6 @@ WORKDIR /root/
 COPY --from=builder /app/.env .env
 COPY --from=builder /app/worker .
 COPY --from=builder /app/scripts/migrations ./migrations
+COPY --from=builder /app/internal/common/email/templates ./templates/email
 
 CMD ["./worker"]
